--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 nav,
 .nav-links {
   display: flex;
-  margin: 0 3.6rem;
+  /* margin: 0 3.6rem; */
 }
 
 /* nav {
@@ -67,14 +67,20 @@ nav,
   padding: 20px 0;
   width: 100%;
   display: flex;
-  /* flex-wrap: wrap; */
   justify-content: space-between;
   margin-bottom: 16px;
   text-align: center;
 }
 
+.svg{
+  /* width: 30px; */
+  height: auto;
+  /* margin-right: 24px; */
+}
+
 .nav-links {
-  
+  display: flex;
+  flex-wrap: wrap;
   gap: 1.5rem;
   list-style: none;
   font-size: 1.2rem;
